--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
         <p>Con mucha alegría, te invitamos a celebrar la próxima llegada de nuestro bebé.</p>
 
         <div class="parents">
-            Alberto Vélez Ramírez<br>
+            Laura Fabiola Reyes Moreno<br>
             &<br>
-            Laura Fabiola Reyes Moreno
+            Alberto Vélez Ramírez
         </div>
 
         <div class="info-box">
